@@ -50,11 +50,11 @@ typedef int ssize_t;
 #include <send_mosq.h>
 #include <util_mosq.h>
 
-int _mosquitto_will_set(struct mosquitto *mosq, bool will, const char *topic, uint32_t payloadlen, const uint8_t *payload, int qos, bool retain)
+int _mosquitto_will_set(struct mosquitto *mosq, const char *topic, uint32_t payloadlen, const uint8_t *payload, int qos, bool retain)
 {
 	int rc = MOSQ_ERR_SUCCESS;
 
-	if(!mosq || (will && !topic)) return MOSQ_ERR_INVAL;
+	if(!mosq || !topic) return MOSQ_ERR_INVAL;
 	if(payloadlen > 268435455) return MOSQ_ERR_PAYLOAD_SIZE;
 
 	if(mosq->will){
@@ -70,31 +70,29 @@ int _mosquitto_will_set(struct mosquitto *mosq, bool will, const char *topic, ui
 		mosq->will = NULL;
 	}
 
-	if(will){
-		mosq->will = _mosquitto_calloc(1, sizeof(struct mosquitto_message));
-		if(!mosq->will) return MOSQ_ERR_NOMEM;
-		mosq->will->topic = _mosquitto_strdup(topic);
-		if(!mosq->will->topic){
+	mosq->will = _mosquitto_calloc(1, sizeof(struct mosquitto_message));
+	if(!mosq->will) return MOSQ_ERR_NOMEM;
+	mosq->will->topic = _mosquitto_strdup(topic);
+	if(!mosq->will->topic){
+		rc = MOSQ_ERR_NOMEM;
+		goto cleanup;
+	}
+	mosq->will->payloadlen = payloadlen;
+	if(mosq->will->payloadlen > 0){
+		if(!payload){
+			rc = MOSQ_ERR_INVAL;
+			goto cleanup;
+		}
+		mosq->will->payload = _mosquitto_malloc(sizeof(uint8_t)*mosq->will->payloadlen);
+		if(!mosq->will->payload){
 			rc = MOSQ_ERR_NOMEM;
 			goto cleanup;
 		}
-		mosq->will->payloadlen = payloadlen;
-		if(mosq->will->payloadlen > 0){
-			if(!payload){
-				rc = MOSQ_ERR_INVAL;
-				goto cleanup;
-			}
-			mosq->will->payload = _mosquitto_malloc(sizeof(uint8_t)*mosq->will->payloadlen);
-			if(!mosq->will->payload){
-				rc = MOSQ_ERR_NOMEM;
-				goto cleanup;
-			}
 
-			memcpy(mosq->will->payload, payload, payloadlen);
-		}
-		mosq->will->qos = qos;
-		mosq->will->retain = retain;
+		memcpy(mosq->will->payload, payload, payloadlen);
 	}
+	mosq->will->qos = qos;
+	mosq->will->retain = retain;
 
 	return MOSQ_ERR_SUCCESS;
 
@@ -102,6 +100,24 @@ cleanup:
 	if(mosq->will){
 		if(mosq->will->topic) _mosquitto_free(mosq->will->topic);
 		if(mosq->will->payload) _mosquitto_free(mosq->will->payload);
+	}
+	_mosquitto_free(mosq->will);
+	mosq->will = NULL;
+
+	return rc;
+}
+
+int _mosquitto_will_clear(struct mosquitto *mosq, const char *topic, uint32_t payloadlen, const uint8_t *payload, int qos, bool retain)
+{
+	int rc = MOSQ_ERR_SUCCESS;
+
+	if(mosq->will->topic){
+		_mosquitto_free(mosq->will->topic);
+		mosq->will->topic = NULL;
+	}
+	if(mosq->will->payload){
+		_mosquitto_free(mosq->will->payload);
+		mosq->will->payload = NULL;
 	}
 	_mosquitto_free(mosq->will);
 	mosq->will = NULL;
